[gd_scene load_steps=2 format=3 uid="uid://f8x1u31bp3vw"]

[ext_resource type="Script" path="res://person_hud.gd" id="1_sbt5d"]

[node name="person_hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sbt5d")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -300.0
offset_right = 600.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Personlist Key"
horizontal_alignment = 1

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 999.0
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Person Name"

[node name="PersonName" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "aaaaa"

[node name="NewPersonName" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "New Person Name"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Person Short Name"

[node name="PersonShortName" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "aaaaa"

[node name="NewPersonShortName" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "New Person Short Name"

[node name="UpdatePersonName" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Update Person Name"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Modify Personlist Length"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "New Personlist Entry"

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Delete Last Personlist Entry"

[node name="ExportAllFiles" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "EXPORT ALL FILES"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="HBoxContainer/VBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/UpdatePersonName" to="." method="_on_update_person_name_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ExportAllFiles" to="." method="_on_export_all_files_pressed"]
